fix container align

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -41,9 +41,10 @@ body
                         margin-right 0 !important
     .category-list
         @media (max-width 1024px)
-            max-width 280px
-            margin 0 auto
-            display block
+            &.with-topics
+                max-width 280px
+                margin 0 auto
+                display block
         tbody
             border-top 1px solid #f2f2f2
             .category
@@ -63,7 +64,7 @@ body
                     display block
                     border-color transparent !important
                     box-shadow 0 0px 8px rgba(0,0,0,.4)
-                    border-radius 4px
+                    border-radius 8px
                     margin 15px 0
     .nav-pills
         @media (max-width 1024px)
